adding more handlebar files as prep for adding ABCJS code to app

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,14 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>CodaTunes</title>
-    <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/abcjs/3.1.1/abcjs_basic_midi-min.js></script>
+  <meta charset="UTF-8">
+  <title>Codatunes!</title>
+
+   <!-- Bootstrap File -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="./assets/css/style.css" media="all" rel="stylesheet" type="text/css"/>
+   <!-- JQuery -->
+  <script src="https://code.jquery.com/jquery.js"></script>
 </head>
 
 <body>
 {{{body}}}
+    
 </body>
 </html>
