/random now creates a random sheet of music

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,11 +8,20 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="./assets/css/style.css" media="all" rel="stylesheet" type="text/css"/>
    <!-- JQuery -->
-  <script src="https://code.jquery.com/jquery.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 </head>
 
 <body>
-{{{body}}}
+  <div class="container">
+    {{{body}}}
+  </div>
+
+  <div class="footer">
+    <p class="text-center"> Music Maker is an open source music creator, written by Adam Haag, Stacy Feldstein, and Jim Gildersleeve </p>
+  </div>
     
 </body>
 </html>
