--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -1,2 +1,16 @@
 <script src="./assets/js/sheet.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/abcjs/3.1.1/abcjs_plugin-min.js"></script>
+
+<script>
+$(document).ready(function(){
+  ABCJS.plugin.show_midi = true;
+  ABCJS.plugin.hide_abc = true;
+  var music = new Sheet("treble", "4/4", "C", "1/4").random();
+  $("#canvas").html(music.replace(/Q:1\/4=[0-9]*/, "Q:1/4=" + $(this).val()));
+  ABCJS.plugin.start(jQuery);
+});
+
+</script>
+<div id="canvas"></div>
+
 
