Randomly generated pieces can now be saved to db

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
   </div>
 
   <div class="footer">
-    <p class="text-center"> Music Maker is an open source music creator, written by Adam Haag, Stacy Feldstein, and Jim Gildersleeve </p>
+    <p class="text-center">Codatunes is an open source music creator, written by Adam Haag, Stacy Feldstein, and Jim Gildersleeve </p>
   </div>
     
 </body>
