--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -3,14 +3,22 @@
 
 <script>
 $(document).ready(function(){
-  ABCJS.plugin.show_midi = true;
+  //ABCJS.plugin.show_midi = true;
   ABCJS.plugin.hide_abc = true;
-  var music = new Sheet("treble", "4/4", "C", "1/4").random();
+  const music = new Sheet("treble", "4/4", "C", "1/4").random();
   $("#canvas").html(music.replace(/Q:1\/4=[0-9]*/, "Q:1/4=" + $(this).val()));
   ABCJS.plugin.start(jQuery);
+
+  $("#saveRandom").on("click", function(){
+    $.post("/api/save/random", {title: "test", music: music}, function(result){
+      console.log(result);
+    });
+  });
 });
 
 </script>
 <div id="canvas"></div>
+
+<button id="saveRandom">Save</button>
 
 
