--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -1,16 +1,15 @@
 <script src="./assets/js/sheet.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/abcjs/3.1.1/abcjs_plugin-min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/abcjs/3.1.1/abcjs_plugin-min.js"></script>
 
 <script>
 $(document).ready(function(){
-  //ABCJS.plugin.show_midi = true;
   ABCJS.plugin.hide_abc = true;
   const music = new Sheet("treble", "4/4", "C", "1/4").random();
   $("#canvas").html(music.replace(/Q:1\/4=[0-9]*/, "Q:1/4=" + $(this).val()));
   ABCJS.plugin.start(jQuery);
 
   $("#saveRandom").on("click", function(){
-    $.post("/api/save/random", {title: "test", music: music}, function(result){
+    $.post("/api/save/random", {title: null, music: music}, function(result){
       console.log(result);
     });
   });
