google authentication added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Codatunes!</title>
 
-   <!-- Bootstrap File -->
+  <!-- Bootstrap File -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href="./assets/css/style.css" media="all" rel="stylesheet" type="text/css"/>
-   <!-- JQuery -->
-  <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
+  <link href="./assets/css/style.css" media="all"
+    rel="stylesheet" type="text/css" />
+  <!-- JQuery -->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+  <!-- Google Sign In-->
+  <script src="https://apis.google.com/js/platform.js"
+    async defer></script>
+  <meta name="google-signin-client_id" content="274983882148-a38ar9dbomvebpt5uhnidr1pbe28i1e9.apps.googleusercontent.com">
 </head>
 
 <body>
@@ -20,8 +25,11 @@
   </div>
 
   <div class="footer">
-    <p class="text-center">Codatunes is an open source music creator, written by Adam Haag, Stacy Feldstein, and Jim Gildersleeve </p>
+    <p class="text-center">Codatunes is an open source music creator,
+      written by Adam Haag, Stacy Feldstein,
+      and Jim Gildersleeve </p>
   </div>
-    
+
 </body>
+
 </html>
