--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,7 +1,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/abcjs/3.1.1/abcjs_editor_midi-min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/abcjs/3.1.1/abcjs_plugin-min.js"></script>
 <textarea id="abc"></textarea>
-<div id="canvas" style ></div>
+<div id="canvas" style></div>
 <div id="warnings"> </div>
 <div id="notation"></div>
 <div id="midi"></div>
@@ -10,26 +10,44 @@
 <script>
   ABCJS.plugin.show_midi = true;
   ABCJS.plugin.hide_abc = true;
-  $(document).ready(function(){
-    window.onload = function() {
-      abc_editor = new ABCJS.Editor("abc", {
-        canvas_id:"canvas", 
-        midi_id:"midi", 
-        warnings_id:"warnings",
-        parser_options:{print:1, header_only:0},
-        midi_options:{program: 64}});
+  $(document).ready(function () {
+    window.onload = function () {
+      abc_editor = new ABCJS.Editor(
+        "abc", {
+          canvas_id: "canvas",
+          midi_id: "midi",
+          warnings_id: "warnings",
+          parser_options: {
+            print: 1,
+            header_only: 0
+          },
+          midi_options: {
+            program: 64
+          }
+        });
     }
     ABCJS.plugin.start(jQuery);
 
-    $("#saveCreation").on("click", function(){
-      if($("#warnings").is(":empty")){ //only allow user to save if score is error free.  
-        $.post("/api/save/creation", {title: "test", music: $("#abc").val(), random: false}, function(result){
-          console.log(result);
-        });
-      } else {
-        alert("Please resolve warnings before saving");
-      }
+    $("#saveCreation").on("click",
+      function () {
+        if ($("#warnings").is(
+            ":empty")) { //only allow user to save if score is error free.
+          $.post(
+            "/api/save/creation", {
+              title: "test",
+              music: $("#abc").val(),
+              random: false
+            },
+            function (result) {
+              console.log(
+                result);
+            });
+        } else {
+          alert(
+            "Please resolve warnings before saving"
+          );
+        }
 
-    });
+      });
   })
 </script>
