--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,48 @@
-
 <!-- Jumbotron with Title -->
 <div class="jumbotron">
-    
-    <h1 class="text-center"><strong> Hello, generate your own Music : with Creator! </strong></h1>
-    <p class="text-center">Rated M for Music - create your own or randomly select a score!!!</p>
+
+  <h1 class="text-center"><strong> Hello, generate your own Music : with Creator! </strong></h1>
+  <p class="text-center">Rated M for Music - create your own or
+    randomly select a score!!!</p>
 </div>
+<div id="my-signin2"></div>
+<script>
+  function onSuccess(googleUser) {
+    console.log('Logged in as: ' +
+      googleUser.getBasicProfile().getName()
+    );
+  }
+
+  function onFailure(error) {
+    console.log(error);
+  }
+
+  function renderButton() {
+    gapi.signin2.render('my-signin2', {
+      'scope': 'profile email',
+      'width': 240,
+      'height': 50,
+      'longtitle': true,
+      'theme': 'dark',
+      'onsuccess': onSuccess,
+      'onfailure': onFailure
+    });
+  }
+</script>
+
+<script src="https://apis.google.com/js/platform.js?onload=renderButton"
+  async defer></script>
+
+<a href="#" onclick="signOut();">Sign out</a>
+<script>
+  function signOut() {
+    var auth2 = gapi.auth2.getAuthInstance();
+    auth2.signOut().then(function () {
+      console.log(
+        'User signed out.');
+    });
+  }
+</script>
 
 <ul class="menu">
   <li class="selected">
@@ -18,8 +56,6 @@
   <li>
     <form method="GET" action="/create">
       <button title="Create your own score?" data-page="Create">Create your own?</button>
-    </form>  
+    </form>
   </li>
 </ul>
-
-
