--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,6 +11,7 @@
     console.log('Logged in as: ' +
       googleUser.getBasicProfile().getName()
     );
+    console.log(googleUser.getBasicProfile().getId());
   }
 
   function onFailure(error) {
@@ -45,9 +46,6 @@
 </script>
 
 <ul class="menu">
-  <li class="selected">
-    <button title="You want to login?" data-page="Login">Login?</button>
-  </li>
   <li>
     <form method="GET" action="/random">
       <button type="submit" title="Random" data-page="Select">Generate a random score</button>
