--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -48,12 +48,12 @@
 <ul class="menu">
   <li>
     <form method="GET" action="/random">
-      <button type="submit" title="Random" data-page="Select">Generate a random score</button>
+      <button type="submit" title="Random" data-page="Select">Random</button>
     </form>
   </li>
   <li>
     <form method="GET" action="/create">
-      <button title="Create your own score?" data-page="Create">Create your own?</button>
+      <button title="Create your own score?" data-page="Create">Create</button>
     </form>
   </li>
 </ul>
