styling landing page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,52 +1,63 @@
-<div id="my-signin2"></div>
-<script>
-  function onSuccess(googleUser) {
-    console.log('Logged in as: ' +
-      googleUser.getBasicProfile().getName()
-    );
-    console.log(googleUser.getBasicProfile().getId());
-  }
+<div class="container">
+  <div class="row">
+    <h2 class="text-center">Hone your skills with randomly generated
+      scores!
+      <br>
+      <h2 class="text-center">Or, craft your own masterpiece!</h2>
+  </div>
+  <script>
+    function onSuccess(googleUser) {
+      console.log('Logged in as: ' +
+        googleUser.getBasicProfile()
+        .getName()
+      );
+      console.log(googleUser.getBasicProfile()
+        .getId());
+    }
 
-  function onFailure(error) {
-    console.log(error);
-  }
+    function onFailure(error) {
+      console.log(error);
+    }
 
-  function renderButton() {
-    gapi.signin2.render('my-signin2', {
-      'scope': 'profile email',
-      'width': 240,
-      'height': 50,
-      'longtitle': true,
-      'theme': 'dark',
-      'onsuccess': onSuccess,
-      'onfailure': onFailure
-    });
-  }
-</script>
+    function renderButton() {
+      gapi.signin2.render(
+        'my-signin2', {
+          'scope': 'profile email',
+          'width': 240,
+          'height': 50,
+          'longtitle': true,
+          'theme': 'dark',
+          'onsuccess': onSuccess,
+          'onfailure': onFailure
+        });
+    }
+  </script>
 
-<script src="https://apis.google.com/js/platform.js?onload=renderButton"
-  async defer></script>
+  <script src="https://apis.google.com/js/platform.js?onload=renderButton"
+    async defer></script>
 
-<a href="#" onclick="signOut();">Sign out</a>
-<script>
-  function signOut() {
-    var auth2 = gapi.auth2.getAuthInstance();
-    auth2.signOut().then(function () {
-      console.log(
-        'User signed out.');
-    });
-  }
-</script>
+  <script>
+    function signOut() {
+      var auth2 = gapi.auth2.getAuthInstance();
+      auth2.signOut().then(function () {
+        console.log(
+          'User signed out.');
+      });
+    }
+  </script>
+  <div class="row">
+    <div class="col-md-2"></div>
 
-<ul class="menu">
-  <li>
-    <form method="GET" action="/random">
-      <button type="submit" title="Random" data-page="Select">Generate a random score</button>
-    </form>
-  </li>
-  <li>
-    <form method="GET" action="/create">
-      <button title="Create your own score?" data-page="Create">Create your own?</button>
-    </form>
-  </li>
-</ul>
+    <div class="col-md-4">
+      <form method="GET" action="/random">
+        <button type="submit" class="btn" title="Random"
+          data-page="Select">Generate a random score</button>
+      </form>
+    </div>
+    <div class="col-md-4">
+      <form method="GET" action="/create">
+        <button type="submit" class="btn" title="Create your own score?"
+          data-page="Create">Create your own score</button>
+      </form>
+    </div>
+  </div>
