--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,43 +1,87 @@
-
 .jumbotron h1 {
-  color: rgb(255, 255, 89);
+  color: black;
+  background-color: rgba(245, 245, 245, 0.48);
+  font-size: 115px;
   font-family: 'Monoton', cursive;
-  background-color: rgba(100, 100, 126, 0.26);
+}
 
+.jumbotron {
+  background-image: url("../images/image1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+h2 {
+  font-family: 'Libre Baskerville', serif;
+}
+
+h3 {
+  font-family: 'Roboto', sans-serif;
+  color: white;
+  background: black;
+}
+
+p {
+  font-family: 'Roboto', sans-serif;
+}
+
+.btn {
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  background-color: #BA8BE6;
+  color: white;
+}
+
+.abcRioButton {
+  display: block;
+  clear: both;
+}
 
 body {
-  color: #333333 ;
-}
-ul {
-  list-style: none;
+  color: #333333;
 }
 
-a, a:visited {
-  color: #0884FF ;
+li {
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+}
+
+a,
+a:visited {
+  color: #0884FF;
   text-decoration: none;
 }
+
 a:hover {
   text-decoration: underline;
-  font-weight:bold;
+  font-weight: bold;
 }
+
 em {
   font-weight: bold;
 }
+
 .wrapper {
   margin: 0 auto;
   max-width: 900px;
-  background-color: #EADDB8 ;
+  background-color: #EADDB8;
   border-radius: 12px;
 }
+
 .menu {
   list-style: none;
 }
+
 .menu li {
   display: inline-block;
   padding-bottom: 8px;
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
 }
+
 .menu button {
-  background-color: #333333 ;
+  background-color: #333333;
   height: 48px;
   width: 118px;
   border: none;
@@ -46,43 +90,34 @@ em {
   display: inline-block;
   font-size: 18px;
 }
+
 .menu button:hover {
   border: 1px dotted white;
 }
 
 .menu li.selected button {
-  color: #333333 ;
+  color: #333333;
   background-color: white;
 }
 
-.header, .footer {
+.header,
+.footer {
   font-family: Monaco, "Lucida Console", monospace;
   padding: 8px 32px;
 }
+
 .header {
-  border-bottom: 1px dashed #555555 ;
+  border-bottom: 1px dashed #555555;
 }
+
 .footer {
-  border-top: 1px dashed #555555 ;
+  border-top: 1px dashed #555555;
   margin-top: 8px;
   padding-top: 8px;
   text-align: center;
   font-size: 12px;
 }
 
-h1, h2 {
-  margin: 0;
-  padding: 0;
-}
-h1 {
-  font-size: 100px;
-}
-h2 {
-  font-style: italic;
-  font-size: 24px;
-  font-weight: normal;
-  color: wheat;
-}
 .page {
   padding: 0 32px;
   min-height: 300px;
@@ -94,32 +129,38 @@ h2 {
   font-size: 14px;
   margin-top: 53px;
 }
+
 .example {
   height: 400px;
   position: relative;
 }
+
 .left {
   float: left;
   width: 280px;
 }
+
 .source {
   font-size: 10px;
   background-color: white;
   border-radius: 8px;
   padding: 8px;
 }
+
 .arrow-col {
   float: left;
   margin-right: 8px;
 }
+
 .arrow {
   float: left;
   padding: 4px 0 4px 12px;
   margin-left: 12px;
-  background-color: #333333 ;
+  background-color: #333333;
   color: white;
   margin-top: 100px;
 }
+
 .arrow-after {
   float: left;
   width: 0px;
@@ -127,13 +168,14 @@ h2 {
   margin-top: 90px;
   border-style: solid;
   border-width: 25px 0 25px 40px;
-  border-color: transparent transparent transparent #333333 ;
+  border-color: transparent transparent transparent #333333;
 }
 
 .engraving-container {
   width: 360px;
   overflow: hidden;
 }
+
 #engraving {
   border-radius: 8px;
   padding: 8px;
@@ -174,67 +216,72 @@ h2 {
   white-space: pre-line;
 }
 
+
 /* This is the spot where the menu goes to a second line */
-@media only screen and (max-width : 880px) {
+
+@media only screen and (max-width: 880px) {
   .menu button {
-      height: 24px;
-      width: 80px;
+    height: 24px;
+    width: 80px;
   }
   .menu {
-      margin: 8px 0;
-      padding: 0;
+    margin: 8px 0;
+    padding: 0;
   }
 }
+
 
 /* This is the spot where the example is too wide */
-@media only screen and (max-width : 875px) {
+
+@media only screen and (max-width: 875px) {
   .example {
-      height: 620px;
+    height: 620px;
   }
   .left {
-      float: inherit;
+    float: inherit;
   }
   .aside {
-      position: absolute;
-      bottom: 0;
+    position: absolute;
+    bottom: 0;
   }
   .arrow {
-      margin-top: 9px;
+    margin-top: 9px;
   }
   .arrow-after {
-      margin-top: 0;
+    margin-top: 0;
   }
   .arrow-col {
-      transform: rotate(90deg);
-      -moz-transform: rotate(90deg);
-      -ms-transform: rotate(90deg);
-      -webkit-transform: rotate(90deg);
-      -o-transform: rotate(90deg);
-      margin-top: 40px;
-      margin-bottom: 54px;
-      margin-left: 70px;
+    transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    margin-top: 40px;
+    margin-bottom: 54px;
+    margin-left: 70px;
   }
   #engraving {
-      transform: scale(0.36);
-      -moz-transform: scale(0.36);
-      -ms-transform: scale(0.36);
-      -webkit-transform: scale(0.36);
-      -o-transform: scale(0.36);
+    transform: scale(0.36);
+    -moz-transform: scale(0.36);
+    -ms-transform: scale(0.36);
+    -webkit-transform: scale(0.36);
+    -o-transform: scale(0.36);
   }
   .engraving-container {
-      clear: both;
-      height: 250px;
+    clear: both;
+    height: 250px;
   }
-
   #main-midi {
-      margin-top: -300px;
-      width: 283px;
+    margin-top: -300px;
+    width: 283px;
   }
 }
 
+
 /* This is the spot where the text barely fits, so take off some padding. */
-@media only screen and (max-width : 345px) {
+
+@media only screen and (max-width: 345px) {
   .page {
-      padding: 0 12px;
+    padding: 0 12px;
   }
 }
