--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Josefin+Sans|Monoton|Roboto"
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Monoton|Roboto"
     rel="stylesheet">
 
   <!-- CSS Files -->
@@ -35,11 +35,24 @@
       <!-- Jumbotron with Title -->
       <div class="jumbotron">
 
-        <h1 class="text-center"><strong>CodaTunes</strong></h1>
-        <h2 class="text-center">Generate your own randomly selected score or craft your own masterpiece!!</h2>
-        <p class="text-center">Rated M for Music!!</p>
+        <h1 class="text-center">CodaTunes</h1>
+        <h3 class="text-center">Rated M for Music</h3>
       </div>
-
+      <!-- navbar -->
+      <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <ul class="nav navbar-nav">
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="https://abcjs.net/"
+                target="_blank">About ABC Music Notation</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li id="my-signin2"></li>
+            <li><a href="#"><span class="glyphicon glyphicon-log-out" onclick="signOut();"></span>Sign out</a></li>
+          </ul>
+        </div>
+      </nav>
       {{{body}}}
     </div>
 
