testing with session storage

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" href="./assets/css/abcjs-midi.css">
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/abcjs/3.1.1/abcjs_editor_midi-min.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/abcjs/3.1.1/abcjs_plugin-min.js"></script>-->
 <textarea id="abc" rows="10" col="20"></textarea>
@@ -13,32 +15,42 @@
 </div>
   <div id="midi-download"></div>
 <button id="saveCreation">Save</button>
+<button id="makeMidi">MIDI</button>
 
 <script>
   //ABCJS.plugin.show_midi = true;
   //ABCJS.plugin.hide_abc = true;
-  $(document).ready(function () {
+
+	function initEditor() {
+		new ABCJS.Editor("abc", { 
+      paper_id: "canvas",
+			generate_midi: false,
+			generate_warnings: true,
+			warnings_id:"warnings"
+		});
+	}
+
+	window.addEventListener("load", initEditor, false);
+  function makeMidi(){
       abc_editor = new ABCJS.Editor(
         "abc", {
-          generate_midi: false,
+          generate_midi: true,
           paper_id: "canvas",
           midi_id: "midi",
           midi_download_id: "midi-download", 
-          warnings_id: "warnings",
+          generate_warnings: false,
           midi_options: {
             generateDownload: true
           }
-
         });
-      //abc_editor.show_midi = true;
-    
-    
-    //ABCJS.plugin.start(jQuery);
-
+      abc_editor = null; //after it makes midi, remove the editor.  
+      
+    }
+  $(document).ready(function () {
     $("#saveCreation").on("click",
       function () {
         if ($("#warnings").is(":empty") 
-        && !$("#abc").is(":empty")) { //only allow user to save if score is error free, and not empty
+        && $("#abc").val().trim() !== "") { //only allow user to save if score is error free, and not blank
           $.post(
             "/api/save/creation", {
               title: "test",
@@ -55,5 +67,7 @@
           );
         }
       });
+
+    $("#makeMidi").on("click", makeMidi);
   })
 </script>
