--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>CodaTunes!</title>
+  <title>Codatunes!</title>
 
   <!-- Bootstrap File -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Josefin+Sans|Monoton|Roboto"
-    rel="stylesheet">
-
   <!-- CSS Files -->
-
   <link href="./assets/css/style.css" media="all"
     rel="stylesheet" type="text/css" />
   <link href="./assets/css/footer.css" media="all"
@@ -30,25 +23,15 @@
 
 <body>
   <div id="wrapper">
-    <div class="container" id="content">
+  <div class="container" id="content">
+    {{{body}}}
+  </div>
 
-      <!-- Jumbotron with Title -->
-      <div class="jumbotron">
-
-        <h1 class="text-center"><strong>CodaTunes</strong></h1>
-        <h2 class="text-center">Generate your own randomly selected score or craft your own masterpiece!!</h2>
-        <p class="text-center">Rated M for Music!!</p>
-      </div>
-
-      {{{body}}}
-    </div>
-
-    <div class="footer" id="footer">
-      <p class="text-center">Codatunes is an open source music creator,
-        written by Adam Haag, Stacy Feldstein,
-        and Jim Gildersleeve </p>
-    </div>
+  <div class="footer" id="footer">
+    <p class="text-center">Codatunes is an open source music creator,
+      written by Adam Haag, Stacy Feldstein,
+      and Jim Gildersleeve </p>
+  </div>
   </div>
 </body>
-
 </html>
