--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,48 +1,17 @@
 <div id="my-signin2"></div>
-<script>
-  function onSuccess(googleUser) {
-    console.log('Logged in as: ' +
-      googleUser.getBasicProfile().getName()
-    );
-    console.log(googleUser.getBasicProfile().getId());
-  }
 
-  function onFailure(error) {
-    console.log(error);
-  }
-
-  function renderButton() {
-    gapi.signin2.render('my-signin2', {
-      'scope': 'profile email',
-      'width': 240,
-      'height': 50,
-      'longtitle': true,
-      'theme': 'dark',
-      'onsuccess': onSuccess,
-      'onfailure': onFailure
-    });
-  }
-</script>
 
 <script src="https://apis.google.com/js/platform.js?onload=renderButton"
   async defer></script>
+<script src="./assets/js/indexScript.js"></script>
 
 <a href="#" onclick="signOut();">Sign out</a>
-<script>
-  function signOut() {
-    var auth2 = gapi.auth2.getAuthInstance();
-    auth2.signOut().then(function () {
-      console.log(
-        'User signed out.');
-    });
-  }
-</script>
 
 <ul class="menu">
   <li>
-    <form method="GET" action="/random">
-      <button type="submit" title="Random" data-page="Select">Random</button>
-    </form>
+  
+      <button id="random" title="Random" data-page="Select">Random</button>
+    
   </li>
   <li>
     <form method="GET" action="/create">
