--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,9 +10,9 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Monoton|Roboto"
     rel="stylesheet">
   <!-- CSS Files -->
-  <link href="./assets/css/style.css" media="all"
+  <link href="../assets/css/style.css" media="all"
     rel="stylesheet" type="text/css" />
-  <link href="./assets/css/footer.css" media="all"
+  <link href="../assets/css/footer.css" media="all"
     rel="stylesheet" type="text/css" />
   <!-- JQuery -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -40,7 +40,7 @@
           <ul class="nav navbar-nav">
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="https://abcjs.net/"
+            <li class="active"><a href="http://www.lesession.co.uk/abc/abc_notation.htm"
                 target="_blank">About ABC Music Notation</a></li>
             <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
