--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
-
-
 <script src="./assets/js/indexScript.js"></script>
+<script src="https://apis.google.com/js/platform.js?onload=renderButton"
+    async defer></script>
 
 <div class="container">
   <div class="row">
@@ -10,21 +10,16 @@
       <h2 class="text-center">Or, craft your own masterpiece!</h2>
   </div>
 
-
-  <script src="https://apis.google.com/js/platform.js?onload=renderButton"
-    async defer></script>
-
   <div class="row">
     <div class="col-md-2"></div>
 
     <div class="col-md-4">
-      <form method="GET" action="/random">
+      <form id="randomPage" method="GET" action="/random">
         <button type="submit" class="btn" title="Random"
           data-page="Select">Generate a random score</button>
       </form>
-    </div>
     <div class="col-md-4">
-      <form method="GET" action="/create">
+      <form id="createPage" method="GET" action="/create">
         <button type="submit" class="btn" title="Create your own score?"
           data-page="Create">Create your own score</button>
       </form>
