--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -1,4 +1,4 @@
-<script src="./assets/js/sheet.js"></script>
+<script src="../assets/js/sheet.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/abcjs/3.1.1/abcjs_plugin-min.js"></script>
 
 <script>
@@ -6,8 +6,8 @@ var user = JSON.parse(sessionStorage.getItem("user")).id;
 $(document).ready(function(){
   ABCJS.plugin.hide_abc = true;
   const music = new Sheet("treble", "4/4", "C", "1/4").random();
-  $("#canvas").html(music.replace(/Q:1\/4=[0-9]*/, "Q:1/4=" + $(this).val()));
-  //$("#canvas").html(music);
+  //$("#canvas").html(music.replace(/Q:1\/4=[0-9]*/, "Q:1/4=" + $(this).val()));
+  $("#canvas").html(music);
   ABCJS.plugin.start(jQuery);
   console.log(user);
 
