--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <script src="./assets/js/indexScript.js"></script>
 <script src="https://apis.google.com/js/platform.js?onload=renderButton"
-    async defer></script>
+  async defer></script>
 
 <div class="container">
   <div class="row">
@@ -18,6 +18,7 @@
         <button type="submit" class="btn" title="Random"
           data-page="Select">Generate a random score</button>
       </form>
+    </div>
     <div class="col-md-4">
       <form id="createPage" method="GET" action="/create">
         <button type="submit" class="btn" title="Create your own score?"
@@ -25,3 +26,4 @@
       </form>
     </div>
   </div>
+</div>
