move random.handlebars js into a separate file

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,7 +45,7 @@
             <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             <li id="my-signin2"></li>
-            <li><a href="#"><span class="glyphicon glyphicon-log-out" onclick="signOut();"></span>Sign out</a></li>
+            <li><a href="#" onclick="signOut();"><span class="glyphicon glyphicon-log-out"></span>Sign out</a></li>
           </ul>
         </div>
       </nav>
