--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -2,8 +2,22 @@
 <script src="../assets/js/randomScript.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/abcjs/3.1.1/abcjs_plugin-min.js"></script>
 
-<div id="canvas"></div>
+<div class="row">
+  <div class="col-md-9">
 
-<button id="saveRandom">Save</button>
+    <div id="canvas"></div>
+
+  </div>
+  <div class="col-md-3">
+    
+
+  </div>
+</div>
 
 
+<div class="row">
+  <div class="col-md-6 text-right"></div>
+  <div class="col-md-6">
+    <button id="saveRandom">Save</button>
+  </div>
+</div>
