added code to add a list of existing scores to random page

--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -9,8 +9,13 @@
 
   </div>
   <div class="col-md-3">
-    
-
+    <ul>
+    {{#each scores}}
+      <li data={{this.music}}>
+        {{this.title}}
+      </li>
+    {{/each}}
+    </ul>
   </div>
 </div>
 
