--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -53,7 +53,8 @@
     </div>
 
   <div class="footer" id="footer">
-    <p class="text-center">Codatunes is an open source music creator,
+    <p class="text-center">Codatunes is an open source music creator 
+      (using <a href="https://github.com/paulrosen/abcjs" target="_blank">abcjs</a>),
       written by Adam Haag, Stacy Feldstein,
       and Jim Gildersleeve </p>
   </div>
