--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -260,6 +260,9 @@ em {
     position: absolute;
     bottom: 0;
   }
+  .offset {
+    margin-top: -370px;
+  }
   .arrow {
     margin-top: 9px;
   }
