--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
       <!-- Jumbotron with Title -->
       <div class="jumbotron">
 
-        <h1 class="text-center">CodaTunes</h1>
+        <h1 class="text-center"><a href="/">CodaTunes</a></h1>
         <h3 class="text-center">Rated M for Music</h3>
       </div>
       <!-- navbar -->
@@ -39,13 +39,16 @@
         <div class="container-fluid">
           <ul class="nav navbar-nav">
           </ul>
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-left">
             <li class="active"><a href="http://www.lesession.co.uk/abc/abc_notation.htm"
                 target="_blank">About ABC Music Notation</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+
+            {{!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li> --}}
+            {{!-- <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> --}}
             <li id="my-signin2"></li>
-            <li><a href="#" onclick="signOut();"><span class="glyphicon glyphicon-log-out"></span>Sign out</a></li>
+            <li id="signOut"><a href="#" onclick="signOut();"><span class="glyphicon glyphicon-log-out"></span>Sign out</a></li>
           </ul>
         </div>
       </nav>
