--- a/views/random.handlebars
+++ b/views/random.handlebars
@@ -10,8 +10,13 @@
 
   </div>
   <div class="col-md-3 ">
+    <div class="row">
+      <button id="saveRandom">Save</button>
+      <button id="newRandom">New Random Score</button>
+    </div>
+
     <div class="row" id="title-row">
-      <h3>Saved Random Scores</h3>
+      <h3 class="text-center">Saved Random Scores</h3>
     </div>
 
     <div class="row" id="body-row">
@@ -26,12 +31,4 @@
 
   </div>
   
-</div>
-
-
-<div class="row">
-  <div class="col-md-6 text-right"></div>
-  <div class="col-md-6">
-    <button id="saveRandom">Save</button>
-  </div>
 </div>
