when a user loads an already existing score, and then saves again, it now updates the original row in the db, rather than posting a new one

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -28,7 +28,7 @@
   <div class="row" id="body-row">
     <ul>
     {{#each scores}}
-      <li value='{{this.music}}' class="score-item">
+      <li music='{{this.music}}' score-id='{{this.id}}'class="score-item">
         {{this.title}}
       </li>
     {{/each}}
